--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#SF_Housing">Ssn Francisco Housing</a>
                 </li>
                 <li>
                     <a href="#online-reputation-management">Online Reputation Management</a>
@@ -29,9 +29,9 @@
     </div>
     <div class="content">
 
-        <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./img_M1/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
+        <div id="SF_Housing" class="SF_Housing">
+            <img src="./img_M1/SF_Housing.jpg" class="float-left" />
+            <h2>San Francisco Housing</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
@@ -75,9 +75,9 @@
         </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h2>Made with ❤️️ by Kim Tung</h2>
         <p>
-            &copy; 2023 Horiseon Social Solution Services, Inc.
+            &copy; 2023 Contact: kimrtung@gmail.com
         </p>
     </div>
 </body>
