--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="#SF_Housing">Ssn Francisco Housing</a>
+                    <a href="#SF_Housing">San Francisco Housing</a>
                 </li>
                 <li>
                     <a href="#online-reputation-management">Online Reputation Management</a>
