--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="content">
 
         <div id="SF_Housing" class="SF_Housing">
-            <img src="./img_M1/SF_Housing.png" class="float-left" />
+            <img src="./img_M1/UFO.jpg" class="float-left" />
             <h2>San Francisco Housing</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
