--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="#SF_Housing">San Francisco Housing</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href="#FinTechFinder">FinTech Finder</a>
                 </li>
                 <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
@@ -36,9 +36,9 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./img_M1/online-reputation-management.jpg" class="float-left" />
-            <h2>Online Reputation Management</h2>
+        <div id="FinTechFinder" class="FinTechFinder">
+            <img src="./img_M1/FinTechFinder.png" class="float-left" />
+            <h2>FinTech Finder</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
