--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Kim<span class="seo">r</span>tung</h1>
         <div>
             <ul>
                 <li>
