--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#FinTechFinder">FinTech Finder</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="#UFO">UFO</a>
                 </li>
             </ul>
             
@@ -43,9 +43,9 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./img_M1/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
+        <div id="UFO" class="UFO">
+            <img src="./img_M1/UFO.jpg" class="float-left" />
+            <h2>UFO</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
