--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
             </p>
         </div>
         <div id="UFO" class="UFO">
-            <img src="./img_M1/UFO.jpg" class="float-left" />
-            <h2>UFO</h2>
+            <a href=https://ktung2018.github.io/UFO_Sightings_JS/">
+                <img src="./img_M1/UFO.jpg" class="float-left" />
+                <h2>UFO</h2>
+            </a>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
