--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </p>
         </div>
         <div id="UFO" class="UFO">
-            <a href=https://ktung2018.github.io/UFO_Sightings_JS/">
+            <a href="https://ktung2018.github.io/UFO_Sightings_JS/">
                 <img src="./img_M1/UFO.jpg" class="float-left" />
                 <h2>UFO</h2>
             </a>
