--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <h2>UFO</h2>
             </a>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+               The program allows user to search through the table for specific information using mutltiple search categories.
+                Use of JavaScript, HTML, CSS and DOM Manipulation to create a dynamic table of UFO Sightings based upon data provided via data.js           
             </p>
         </div>
     </div>
