--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
                 <img src="./img_M1/SF_Housing.png" class="float-left" />
                 <h2>San Francisco Housing</h2>
             </a>
-
-           
+   
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                Aggregation, interactive visualizations, and geospatial analysis, to find properties in the San Francisco market that are viable investment opportunities.        
             </p>
         </div>
         <div id="FinTechFinder" class="FinTechFinder">
