--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src="./img_M1/FinTechFinder.png" class="float-left" />
             <h2>FinTech Finder</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+               Fintech Finder is an application that its customers can use to find fintech professionals from a list of candidates, hire them and pay them. Fintech Finder integrates Ethereum blockchain network in order to enable customers to instantly pay the fintech professionals whom they hire with cryptocurrency           
             </p>
         </div>
         <div id="UFO" class="UFO">
